# md-viewer

./: .gitignore  CLAUDE.md  PLAN.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  watcher.rs
src/components/: StatusBar.tsx
src/components/Editor/: HybridEditor.tsx
src/components/Sidebar/: FileTree.tsx
src/components/Tabs/: TabBar.tsx
src/hooks/: useEditor.ts  useFileSystem.ts
src/stores/: appStore.ts
src/styles/: index.css
src/utils/: pathUtils.ts
