[package]
name = "md-viewer"
version = "0.1.0"
description = "A lightweight Markdown viewer and editor"
authors = ["Larry Waldman"]
edition = "2021"

[lib]
name = "md_viewer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
clap = { version = "4", features = ["derive"] }
